# SignalPilot

./: .dockerignore  .env.example  .gitignore  .gitmodules  4-13-2026-benchmarks.md  4-14-2026-benchmarks.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.eval-runner  Dockerfile.eval-setup  Dockerfile.gateway  Dockerfile.notebook  Dockerfile.sandbox  Dockerfile.web  Dockerfile.web.dockerignore  E2E_VERIFIED.md  README.md  SECURITY.md  SELF_IMPROVE_TEST.md  STORY.md  STORY_PROPOSAL.md  agent-notebooks.md  benchmark-prompting.md  blog-post.md  bm-prompting.md  cloud-connection-setup.md  cloud-optimization-learnings.md  dashboard_products.py  docker-compose.dev.yml  docker-compose.k8s.yml  docker-compose.local.yml  docker-compose.yml  feature-audit.md  handoff.md  handoff2.md  hello-world.md  improvements.md  install.sh  knowledge-base-spec.md  (+8 more)
signalpilot/claude-code-mcp/: .mcp.json.example  README.md  pyproject.toml  setup-claude-code.sh  test_integration.py
signalpilot/claude-code-mcp/signalpilot_mcp/: __init__.py  __main__.py  agent_client.py  client.py  server.py
signalpilot/claude-code-mcp/tests/: test_agent_client.py  test_agent_tools.py  test_check.py  test_client.py  test_error_handling.py  test_server_tools.py
signalpilot/gateway/: .dockerignore  .env.example  k3s.yaml  pyproject.toml
signalpilot/gateway/data/: local_api_key
signalpilot/gateway/gateway/: __init__.py  auth.py  byok.py  byok_aws.py  byok_factory.py  cli.py  correlation.py  deployment.py  dev_local_api_key.py  errors.py  github_client.py  main.py  mcp_auth.py  mcp_server.py  middleware.py  models.py  network_validation.py  project_store.py  sandbox_client.py  schema_utils.py  scope_guard.py  store.py  string_utils.py  trace_markers.py  tunnel_manager.py  url_parser.py
signalpilot/gateway/gateway/analysis_delivery/: __init__.py  credentials.py  design_system.py  followups.py  html_orchestrator.py  intake_actions.py  intake_agent.py  intake_tools.py  model_client.py  preflight.py  progress.py  renderer.py  trace_loader.py
signalpilot/gateway/gateway/api/: __init__.py  _oauth_state.py  agent_runs.py  analysis_trails.py  audit.py  budget.py  byok.py  cache.py  chat.py  connections.py  deps.py  eval_runs.py  files.py  github.py  governance.py  health.py  jupyter_adapter.py  keys.py  knowledge.py  metrics.py  notebook_sessions.py  notebooks.py  notion.py  org_secrets.py  projects.py  query.py  reports.py  sandboxes.py  schema.py  security.py  sessions.py  settings.py  slack.py  tunnels.py  uploads.py  user_secrets.py  workspace_projects.py  workspaces.py
signalpilot/gateway/gateway/auth/: __init__.py  jwt_secret.py  mcp_api_key.py  notebook_jwt.py  user.py
signalpilot/gateway/gateway/byok/: __init__.py  aws_kms.py  factory.py  provider.py
signalpilot/gateway/gateway/common/: ip.py
signalpilot/gateway/gateway/config/: __init__.py  _base.py  auth.py  evals.py  github.py  governance.py  k8s.py  mcp.py  network.py  s3.py  storage.py  uploads.py  workspace_storage.py
signalpilot/gateway/gateway/connectors/: __init__.py  audited.py  base.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  health_monitor.py  mssql.py  mysql.py  pool_manager.py  postgres.py  (+10 more)
signalpilot/gateway/tests/: conftest.py  test_admin_audit_logging.py  test_analysis_delivery.py  test_analysis_trails.py  test_annotations.py  test_api.py  test_audit_csv_injection.py  test_auth_enforcement.py  test_byok.py  test_byok_api.py  test_byok_aws.py  test_byok_endpoint_url.py  test_byok_hardening.py  test_byok_jwt_auth.py  test_byok_org_scoping.py  test_byok_rotation.py  test_chat_traces.py  test_chat_user_isolation.py  test_client_ip_unification.py  test_clone_url_host_header.py  test_cloud_hardening_validator.py  test_concurrency.py  test_connectors.py  test_connectors_live.py  test_correlation.py  test_cors.py  test_credential_reload.py  test_db_engine.py  test_dbt_proxy_api.py  test_dbt_proxy_auth_logging.py  test_dbt_proxy_numeric_bounds.py  test_dbt_proxy_protocol.py  test_dbt_proxy_protocol_limits.py  test_dbt_proxy_protocol_timeout.py  test_dbt_proxy_session.py  test_dbt_proxy_session_limits.py  test_dbt_proxy_tokens.py  test_dbt_validation_prefix_bypass.py  test_e2e_credential_storage.py  test_engine_dbt_validation.py  (+76 more)
sp-sandbox/: Dockerfile  Dockerfile.sandbox  Dockerfile.test  audit.py  constants.py  executor.py  kernel_exec.sh  kernel_runner.py  kernel_session.py  models.py  pyproject.toml  sandbox_exec.sh  sandbox_manager.py  session_manager.py  sp_helper.py  test_audit.py  windows-instructions.md
sp-sandbox/scripts/: setup-linux.sh  setup-windows.ps1
sp-sandbox/test/: run-test.sh  test_kernel_runner.py  test_kernel_session.py  test_sandbox_session.py  test_session_manager.py
workspaces/agent/: README.md  pyproject.toml
workspaces/agent/sandbox/: Dockerfile.gvisor  VENDORED.md  constants.py  dbt_packages.yml  models.py  pyproject.toml  server.py
workspaces/agent/sandbox_client/: __init__.py  client.py  session.py
workspaces/agent/skills_bridge/: README.md
workspaces/agent/tests/: conftest.py  test_resume_wait_cli.py
workspaces/agent/workspaces_agent_resume_wait/: cli.py
workspaces/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
workspaces/api/alembic/: env.py
workspaces/api/tests/: conftest.py  test_auth_clerk.py  test_auth_dependency.py  test_claude_md_renderer.py  test_config.py  test_dashboards_cache.py  test_dashboards_executor.py  test_dashboards_migration.py  test_dashboards_result_capture.py  test_dashboards_routes.py  test_dashboards_routes_cloud_auth.py  test_health.py  test_inference.py  test_main_lifespan_cloud_config.py  test_main_lifespan_runtime.py  test_migration_smoke.py  test_proxy_token_client.py  test_resume_marker.py  test_routes_runs.py  test_routes_runs_cloud_auth.py  test_runs_failure_event.py  test_sandbox_runtime.py  test_spawn_route_integration.py  test_spawner.py  test_states.py  test_stream_pump.py  test_subprocess_spawner.py  test_workdir.py
workspaces/api/workspaces_api/: config.py  db.py  errors.py  main.py  models.py  schemas.py  states.py
(+4296 files in other folders)
