[project]
name = "sp-sandbox"
version = "0.2.0"
description = "SignalPilot gVisor sandbox manager"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "ipykernel>=6.29.0",
    "jupyter_client>=8.6.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
