[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalpilot-mcp"
version = "0.1.0"
description = "Claude Code MCP server for remote SignalPilot gateway management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
signalpilot-mcp-remote = "signalpilot_mcp.server:main"
